@@ -5,6 +5,7 @@ SimGrid (3.3.2-svn) unstable; urgency=low
 
  XBT:
   * Add xbt_set_get_by_name_or_null() [Silas De Munck]
+  * Add xbt_graph_node_get_outedges() [Silas De Munck]
 
  -- Da SimGrid team <simgrid-devel@lists.gforge.inria.fr>
 
